# miniAlphaZeroGomoku

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  Result.txt  compute.hpp  gomoku_bot.cpp  mcts_agent.cpp  merged.cpp  merged_heuristic.cpp  nnet.hpp  test.cpp
Include/: compute.hpp  config.hpp  heuristic.hpp  mcts.hpp  model_b_15_params.h  model_w_15_params.h  network.hpp  nnet.hpp  qnnet.hpp
net-generator/: construct_net.py  finalize.py  infer_test.py  model_b_15_quant.onnx  model_w_15_quant.onnx  parse.py  ptq.py  report_type.py  to_header.py
src/: main.cpp  mcts_agent.cpp  network.cpp
